fixed collapse menu

--- a/body.css
+++ b/body.css
@@ -32,6 +32,7 @@
 
 html {
   scroll-behavior: smooth;
+  width: 100vw;
 }
 
 body {
